--- a/Web_Dev/index.html
+++ b/Web_Dev/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    
     <link rel="icon" type="image/png" href="../Web_Dev/src/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StreetLens</title>
+      <script src="https://js.api.here.com/v3/3.1/mapsjs-core.js"></script>
+      <script src="https://js.api.here.com/v3/3.1/mapsjs-service.js"></script>
+      <script src="https://js.api.here.com/v3/3.1/mapsjs-ui.js"></script>
+      <script src="https://js.api.here.com/v3/3.1/mapsjs-mapevents.js"></script>
   </head>
   <body>
     <div id="root"></div>
